--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       </div>
 
       <div class="copyright">
-        <p>Copyright 2022 || &copy all right reserved.</p>
+        <p>@2023 || Made by Prathamesh Patil.</p>
       </div>
     </footer>
 
@@ -351,4 +351,4 @@
 </html>
 
 <!-- happy coding!!!! -->
-<!-- this project made by Fahad at 27th April, 2022. -->
+<!-- this project made by Fahad at 27th April, 2023. -->
